Bug 440960 - Pass-through group layers should always have an empty projection paint device
Summary: Pass-through group layers should always have an empty projection paint device
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Layer Stack (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-08-14 11:02 UTC by Raghavendra kamath
Modified: 2022-09-20 09:42 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Raghavendra kamath 2021-08-14 11:02:32 UTC
SUMMARY
When pass through mode is active the composite of the group is not updated or changed on the layer stack. This problem only happens when the group has more than one layer. Although it is updated on the canvas but if you check thumbnail of the group having pass through enabled after making changes to one of the layer the thumbnail of the group is not changed or refreshed. We have to enable and disable pass through mode to force regeneration of the thumbnail.

This problems affects exporting individual groups as images action as the composite image of individual group is used for the export. The resulting image is just the composite of the whole file and the group is treated as if it is fully transparent.

STEPS TO REPRODUCE
1. Open Krita 4.4.7 o nightly build and create a new document
2. Add a group layer and add two layers inside this group/ Add some content to these two layers and enable pass through mode for the group
3. Now make changes to one of the two layers and notice the thumbnail of the group. Also try to export the group layer as image from Layers > Import/export > Save group layers option
Comment 1 Halla Rempt 2021-08-14 11:05:05 UTC
Um, yes... I'm not sure whether that's avoidable, because pass-through means the group simply does not _have_ a projection that can be saved.
Comment 2 Halla Rempt 2022-09-20 09:42:31 UTC
Git commit 507de2736567a93c8261180941e048517d93594a by Halla Rempt.
Committed on 20/09/2022 at 09:42.
Pushed by rempt into branch 'master'.

Reset the group layers cache when group is set to pass-through

M  +3    -1    libs/image/kis_group_layer.cc

https://invent.kde.org/graphics/krita/commit/507de2736567a93c8261180941e048517d93594a
Comment 3 Halla Rempt 2022-09-20 09:42:38 UTC
Git commit 1d2e8819be9ab541634b9a3a7c463dfc4eadc8ab by Halla Rempt.
Committed on 20/09/2022 at 09:42.
Pushed by rempt into branch 'krita/5.1'.

Reset the group layers cache when group is set to pass-through
(cherry picked from commit 507de2736567a93c8261180941e048517d93594a)

M  +3    -1    libs/image/kis_group_layer.cc

https://invent.kde.org/graphics/krita/commit/1d2e8819be9ab541634b9a3a7c463dfc4eadc8ab