Reset the group layers cache when group is set to pass-through

BUG:440960
(cherry picked from commit 507de2736567a93c8261180941e048517d93594a)